Fixed squished logo

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h3 {
 
 .logo {
   max-width: 125px;
-  height: auto;
+  max-height: 125px;
 }
 
 .nav {
@@ -166,7 +166,6 @@ h3 {
   background-color: transparent;
   border: 0;
   height: 2.5em;
-  margin-top: 1em;
   cursor: pointer;
   position: absolute;
   right: 1em;
